Project

General

Profile

Actions

Bug #15164

closed

mkmf doesn't work with miniruby on Windows

Bug #15164: mkmf doesn't work with miniruby on Windows

Added by naruse (Yui NARUSE) almost 8 years ago. Updated almost 8 years ago.

Status:
Closed
Assignee:
-
Target version:
-
[ruby-core:89177]

Description

After r59449 nmake failes to run when making ripper and so on.
It because miniruby sets UTF-8 encoding even though the content is CP932 (on Japanese Windows).
It should set ASCII-8BIT and handle as it is.

ripper:
"       Could not be configured. It will not be installed."
"       C:/ruby-trunk/lib/mkmf.rb:1560: invalid byte sequence in UTF-8"
"       Check ext/ripper/mkmf.log for more details."
*** Fix the problems, then remove these directories and try again if you want.

Note that recent Windows sets PATH to paths under %APPDATA% for example
C:\Users<UserNameInANSI>\AppData\Local\Microsoft\WindowsApps

Actions

Also available in: PDF Atom